# SFI

./: .gitignore  README.md  docker-compose.yml
backend/: dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2fd5c6f4c09d_testnew.py  585c78314b8a_add_role_field_in_user.py  5acc7ee3ce0a_add_user_hash_pls.py  6e0b79cd88f9_add_user_hash_pls.py  7b6068a9767a_add_user_email.py  9a3ca6110abf_initial_schema.py  a79936bae82c_create_user_table.py  ab74e136cbf7_add_item_table.py  acaa24430ded_email_unique.py  b9c1c2a0a8c0_add_user_hash.py  c29ff1049424_add_products.py  d53f7dd3b0e2_add_user_hash.py  da815314ddd1_create_user_table.py  fe282194aa9b_create_account_table.py
backend/src/: config.py  database.py  dependencies.py  main.py  mongo.py
backend/src/auth/: router.py  schemas.py  service.py
backend/src/config/: config.yml
backend/src/items/: models.py  router.py  schemas.py  service.py
backend/src/products/: models.py  router.py  schemas.py  service.py
backend/src/users/: models.py  router.py  schemas.py  service.py
deployment/: deploy.sh  env.sh
deployment/backend/: configMap.yaml  deploy.sh  deployment.yaml  secrets.yaml  service.yaml
deployment/dc/: docker-compose.yml
deployment/frontend/: deploy.sh  deployment.yaml
deployment/mongodb/: deploy.sh  values.yaml
deployment/pgsql/: deploy.sh  values.yaml
frontend/: dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
local/: docker-compose.yml
local/config/: config.yml
(+47 files in other folders)
